tests/test85.rael.exp
Error [1:12]: Unsupported type for 'sizeof' operation
| log sizeof 123
|            ^
